Passes BuildCount AND BuildIndex tests